--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="gap-2 d-flex flex-column justify-content-between">
-                    <div class="blocks gap-2 d-flex flex-wrap justify-content-between">                             
+                    <div class="blocks gap-2 d-flex justify-content-between">                             
                             <div class="bg-light rounded-2 d-flex p-2 flex-column justify-content-center flex-grow-1 gap-1">
                                 <div class="fw-bold text-success" >3536</div>
                                 <div class="text-secondary" >contributions</div>
